SP Screen ResDev (Partial)/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Check_Measure_Date__c</fullName>
        <label>Check Measure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Measurer__c</fullName>
        <description>select who CM job</description>
        <label>Check Measurer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACE METALWORKS</fullName>
                </value>
                <value>
                    <fullName>Adam Williams</fullName>
                </value>
                <value>
                    <fullName>Brent Birch</fullName>
                </value>
                <value>
                    <fullName>Carlo Botha</fullName>
                </value>
                <value>
                    <fullName>Craig Howe</fullName>
                </value>
                <value>
                    <fullName>David Corner</fullName>
                </value>
                <value>
                    <fullName>David Spencer</fullName>
                </value>
                <value>
                    <fullName>John Bateman</fullName>
                </value>
                <value>
                    <fullName>John Hemming</fullName>
                </value>
                <value>
                    <fullName>Keith Kelman</fullName>
                </value>
                <value>
                    <fullName>Ross McCreath</fullName>
                </value>
                <value>
                    <fullName>Russell Thorn</fullName>
                </value>
                <value>
                    <fullName>Scott Turner</fullName>
                </value>
                <value>
                    <fullName>Steve Lawrence</fullName>
                </value>
                <value>
                    <fullName>Tony Eddy</fullName>
                </value>
                <value>
                    <fullName>Justen Radich</fullName>
                </value>
                <value>
                    <fullName>Adam Covey</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Michelle Difelice</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Shaun Hutchings</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <formula>Contact__c</formula>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Important_Notes__c</fullName>
        <description>Please add any important notes about this job</description>
        <label>Important Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inhouse_manufactured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inhouse manufactured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_time_hours__c</fullName>
        <description>Please add  how many hours that need to be booked for the install</description>
        <label>Install time (hours)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <label>Installer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACE METAL WORKS</fullName>
                </value>
                <value>
                    <fullName>Adam Williams</fullName>
                </value>
                <value>
                    <fullName>Brent Birch</fullName>
                </value>
                <value>
                    <fullName>Carlo Botha</fullName>
                </value>
                <value>
                    <fullName>David Corner</fullName>
                </value>
                <value>
                    <fullName>John Bateman</fullName>
                </value>
                <value>
                    <fullName>Justen Radich</fullName>
                </value>
                <value>
                    <fullName>Justin G</fullName>
                </value>
                <value>
                    <fullName>Ross McCreath</fullName>
                </value>
                <value>
                    <fullName>Russell Thorn</fullName>
                </value>
                <value>
                    <fullName>Scott Turner</fullName>
                </value>
                <value>
                    <fullName>Steve Lawrence</fullName>
                </value>
                <value>
                    <fullName>Tony Eddy</fullName>
                </value>
                <value>
                    <fullName>Adam Covey</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Darryl Donaldson</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Shaun Hutchings</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installers__c</fullName>
        <description>How many installers are required to complete job</description>
        <label>#  Installers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_at_Kirrawee_notes__c</fullName>
        <label>Job at Kirrawee notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ladder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ladder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Invoice_Received_Factory_Use_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Invoice Received (Factory Use Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Opportunity__r.Contact__r.MobilePhone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Powdercoating_Sent_Date__c</fullName>
        <label>Powdercoating Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Powdercoating__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box if powdercoating required</description>
        <label>Powdercoating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_Ordered__c</fullName>
        <label>Products Ordered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aluminium Fence</fullName>
                </value>
                <value>
                    <fullName>Aluminium Gate</fullName>
                </value>
                <value>
                    <fullName>Aluminium Panel</fullName>
                </value>
                <value>
                    <fullName>Diamond Grille Door</fullName>
                </value>
                <value>
                    <fullName>Diamond Grille Window</fullName>
                </value>
                <value>
                    <fullName>Fire Escape</fullName>
                </value>
                <value>
                    <fullName>Flyscreen Door</fullName>
                </value>
                <value>
                    <fullName>Flyscreen Window</fullName>
                </value>
                <value>
                    <fullName>Pet Door</fullName>
                </value>
                <value>
                    <fullName>Pleated Retractable Screen</fullName>
                </value>
                <value>
                    <fullName>Retractable Roll-Away Screen</fullName>
                </value>
                <value>
                    <fullName>SecureView hinged door</fullName>
                </value>
                <value>
                    <fullName>SecureView Sliding door</fullName>
                </value>
                <value>
                    <fullName>SecureView window</fullName>
                </value>
                <value>
                    <fullName>Steel Door</fullName>
                </value>
                <value>
                    <fullName>Steel Window</fullName>
                </value>
                <value>
                    <fullName>Xceed hinged door</fullName>
                </value>
                <value>
                    <fullName>Xceed Sliding door</fullName>
                </value>
                <value>
                    <fullName>Xceed Window</fullName>
                </value>
                <value>
                    <fullName>Colonial Castings</fullName>
                </value>
                <value>
                    <fullName>CWS retractable screens</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Rockford Slats and Gates</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Rockford: Flydoors</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Rockford: Flyscreens</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Rockford: secureview or Xceed</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>SP Screens Inhouse: Diamond</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>SP Screens Inhouse: Flydoors</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>SP Screens Inhouse: Flyscreen</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>SP Screens Inhouse: SecureView</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>SP Screens Inhouse: Slates and Gates</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Issue</label>
        <referenceTo>Project_Issue__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REWORK_Installation_Date__c</fullName>
        <label>REWORK Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REWORK_time_Hours__c</fullName>
        <label>REWORK time (Hours)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROCKFORD_Notes__c</fullName>
        <label>ROCKFORD Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>STEEL_Check_Measurer__c</fullName>
        <label>STEEL Check Measurer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Peter Ace Metal Works</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SUPPLY_ONLY_edit_ActionPlan_as_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SUPPLY ONLY (edit APlan as required)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Side_rack_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Side rack required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <formula>Opportunity__r.Contact__r.MailingCity</formula>
        <label>Suburb</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Order_Number_RF_CWS_ACE__c</fullName>
        <description>Please put supplier initials and PO #</description>
        <label>Supplier Order Number (RF/CWS/ACE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Install</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>key_in_factory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>key in-factory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>key_on_site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>key on-site</label>
        <type>Checkbox</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>35</label>
    </listViews>
    <listViews>
        <fullName>Jobs_ready_for_install</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Installation_Date__c</columns>
        <columns>Install_time_hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Installation_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Jobs ready for install.</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>New_Install</fullName>
        <active>true</active>
        <label>New Install</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rework_Project</fullName>
        <active>true</active>
        <label>Rework Project</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>